<resources>
    <string name="app_name">Poat</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="account">Account</string>
    <string name="course">Courses</string>
    <string name="assignments">Assignments</string>
    <string name="tests">Tests</string>
    <string name="today">Today</string>
    <string name="thisweek">Next 7 Days</string>
    <string name="thismonth">Next 30 Days</string>
    <string name="past">Past</string>
    <string name="gpa">GPA</string>

    <string name="open">Open</string>
    <string name="close">Close</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_new_course">New Course</string>

    <string name="hello_world">Hello world!</string>
    <string name="new_course">New Course</string>
    <string name="course_code">Course Code</string>
    <string name="course_item_title">Title</string>
    <string name="course_new_desc">Description</string>
    <string name="new_course_start_date">Start Date</string>
    <string name="new_course_end_date">End Date</string>
    <string name="title_activity_course_details">Course_details</string>
    <string name="outstanding_assignments">Outstanding Assignments</string>
    <string name="new_assignment">New Assignment</string>
    <string name="title_activity_new_assignment">New Assignment</string>
    <string name="title_activity_assignment_details">Details</string>
    <string name="add_course">Add Course</string>
    <string name="add_assignment">Add Assignment</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_new_test">NewTest</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="newTest">New Test</string>
    <string name="title">Title</string>
    <string name="descriptionTopics">Description/Topics</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="description">Description</string>
    <string name="givenDate">Given Date</string>
    <string name="dueDate">Due Date</string>
    <string name="dueTime">Due Time</string>
    <string name="priority">Priority</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="emailAddress">emailAddress</string>
    <string name="confirmPassword">confirmPassword</string>
    <string name="addTest">Add Test</string>
</resources>
