<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <!-- group with single selected item so only one item is highlighted in the nav menu -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_item_1"
            android:icon="@drawable/ic_drawer"
            android:title="@string/account"/>
        <item
            android:id="@+id/drawer_item_2"
            android:icon="@drawable/ic_drawer"
            android:title="@string/course"/>
        <item
            android:id="@+id/drawer_item_3"
            android:icon="@drawable/ic_drawer"
            android:title="@string/assignments"/>
        <item
            android:id="@+id/drawer_item_4"
            android:icon="@drawable/ic_drawer"
            android:title="@string/tests"/>
        <item
            android:id="@+id/drawer_item_5"
            android:icon="@drawable/ic_drawer"
            android:title="@string/today"/>
        <item
            android:id="@+id/drawer_item_6"
            android:icon="@drawable/ic_drawer"
            android:title="@string/thisweek"/>
        <item
            android:id="@+id/drawer_item_7"
            android:icon="@drawable/ic_drawer"
            android:title="@string/thismonth"/>
        <item
            android:id="@+id/drawer_item_8"
            android:icon="@drawable/ic_drawer"
            android:title="@string/past"/>
    </group>
</menu>