<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="bluescreen1.poat.Courses.CourseDetailsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">
    <bluescreen1.poat.utils.CustomFont
        android:text="@string/course_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/course_details_course_code"
        />

    <bluescreen1.poat.utils.CustomFont
        android:text="@string/course_item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:id="@+id/course_details_title"
        />

    <bluescreen1.poat.utils.CustomFont
        android:text="@string/course_new_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/course_details_desc"
        />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">
        <bluescreen1.poat.utils.CustomFont
            android:text="@string/outstanding_assignments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            />
    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/course_details_assignments"/>
    </LinearLayout>
</LinearLayout>
